[package]
name = "heim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal", "time", "net"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
windows-service = "0.8"