[package]
name = "heim"
version = "0.1.0"
edition = "2024"

[features]
win-service = ["dep:windows-service", "dep:clap"]

[dependencies]
anyhow = "1"
axum = {version = "0.8", features = ["multipart"]}
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal", "time", "net", "fs"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml = "0.9.5"
notify = "8"

windows-service = { version = "0.8", optional = true }
clap = { version = "4.5.47", optional = true, features = ["derive"] }
jsonwebtoken = "9.3.1"
